--- a/pom.xml
+++ b/pom.xml
@@ -29,13 +29,12 @@
 		aquí tu mismo.
 		-->
 		
-		<!-- MySQL 
+		<!-- MySQL 		-->
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>		
     		<version>9.3.0</version>
 		</dependency>
-		-->
 		
 		<!-- PostgreSQL 
 		<dependency>
